Add docker config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     volumes:
       - ./:/var/www
     links:
-      - php
-  php:
+      - app
+  app:
     build:
       context: ./
       dockerfile: docker/php.docker
