--- a/docker/vhost.conf
+++ b/docker/vhost.conf
@@ -1,7 +1,13 @@
 server {
     listen 80;
+    listen 8080;
     index index.php index.html;
     root /var/www/public;
+
+    access_log off;
+    error_log /var/log/nginx/error.log error;
+    sendfile off;
+    client_max_body_size 100m;
 
     location / {
         try_files $uri /index.php?$args;
